# cryptohunter-miner

./: .env  .env.example  alembic.ini  check_leads.py  check_referrals.py  lead_scanner.py  main.py  outreach_sender.py  pyproject.toml  requirements.txt  scanner_session.session  scanner_session.session-journal
bot/: admin.py  dashboard.py  handlers.py  keyboard.py  outreach.py  test_regex.py
bot/webapp/: index.html  script.js  style.css
config/: __init__.py  settings.py
core/: __init__.py  calculator.py  database.py  init_db.py  models.py  tonkeeper.py
cryptohunter_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
exports/: leads_export_2025-10-31.csv  leads_export_2025-10-31_19-31.csv
migrations/: env.py
migrations/versions/: 0a2636636ed6_fix_lead_model.py  f570cb71a7e3_initial_models.py
