# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptohunter_bot"
version = "0.1.0"
description = "CryptoHunter Miner Bot"
dependencies = [
    "aiogram==3.13.1",
    "sqlalchemy[asyncio]==2.0.35",
    "aiomysql==0.2.0",
    "python-dotenv==1.0.1"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.py"]